--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                 <li>I grew up in Cagayan de Oro, Philippines</li>
                 <li>I play Football, preferring the midfield role</li>
             </ul>
+            <h2>MY PROJECTS:</h2>
+            <p class="projects"><a href="https://googleclonebygailloking.netlify.app/">
+                <img src="googleicon.png" alt="GoogleClone" class="image2"> 
+                </a></p>
             <h2>CONTACT:</h2>
             <p>Please contact me through my
                 <a href="https://www.messenger.com/t/100003743282263" target="_blank">Messenger here.</a>
