--- a/index.html
+++ b/index.html
@@ -20,9 +20,14 @@
                 <li>I play Football, preferring the midfield role</li>
             </ul>
             <h2>MY PROJECTS:</h2>
-            <p class="projects"><a href="https://googleclonebygailloking.netlify.app/">
-                <img src="googleicon.png" alt="GoogleClone" class="image2"> 
-                </a></p>
+            <div class="projects">
+                <p><a href="https://googleclonebygailloking.netlify.app/">
+                    <img src="googleicon.png" alt="a website that is a clone of Google" class="image2"> 
+                    </a></p>
+                <p><a href="https://gail-businesscard.netlify.app/">
+                    <img src="Gail.jpg" alt="Gail Loking business card" class="image2"> 
+                    </a></p>
+            </div>
             <h2>CONTACT:</h2>
             <p>Please contact me through my
                 <a href="https://www.messenger.com/t/100003743282263" target="_blank">Messenger here.</a>
