index.html update
change input type from text to email

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a href="https://www.messenger.com/t/100003743282263" target="_blank">Messenger here.</a>
             </p>
             <h3>Enter email for constant updates.</h3>
-            <input type="text" placeholder="Enter email">
+            <input type="email" placeholder="Enter email">
             <button>Join newsletter</button>
         </div>
     
