added new project
added an icon that redirects to my new project for school, Orbion Exploration Website

--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
                 <p><a href="https://gail-businesscard.netlify.app/">
                     <img src="Gail.jpg" alt="Gail Loking business card" class="image2"> 
                     </a></p>
+                <p><a href="https://orbionexploration.netlify.app/">
+                    <img src="orbion.png" alt="Orbion Exploration" class="image2"> 
+                    </a></p>
             </div>
             <h2>CONTACT:</h2>
             <p>Please contact me through my
                 <a href="https://www.messenger.com/t/100003743282263" target="_blank">Messenger here.</a>
             </p>
             <h3>Enter email for constant updates.</h3>
-            <input type="email" placeholder="Enter email">
+            <input type="text" placeholder="Enter email">
             <button>Join newsletter</button>
         </div>
     
