--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                 <p><a href="https://orbionexploration.netlify.app/">
                     <img src="orbion.png" alt="Orbion Exploration" class="image2"> 
                     </a></p>
+                <p><a href="https://gailbirthday.netlify.app/">
+                    <img src="gail.jpg" alt="Gail Birthday" class="image2"> 
+                    </a></p>
             </div>
             <h2>CONTACT:</h2>
             <p>Please contact me through my
