--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <img src="orbion.png" alt="Orbion Exploration" class="image2"> 
                     </a></p>
                 <p><a href="https://gailbirthday.netlify.app/">
-                    <img src="gail.jpg" alt="Gail Birthday" class="image2"> 
+                    <img src="bgil.jpg" alt="Gail Birthday" class="image2"> 
                     </a></p>
             </div>
             <h2>CONTACT:</h2>
