--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 <p><a href="https://gailbirthday.netlify.app/">
                     <img src="bgil.jpg" alt="Gail Birthday" class="image2"> 
                     </a></p>
+                <p><a href="https://loking-project1.netlify.app/">
+                    <img src="noimageicon.png" alt="Project 1 by Loking" class="image2"> 
+                    </a></p>
             </div>
             <h2>CONTACT:</h2>
             <p>Please contact me through my
