added new project

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                 <p><a href="https://loking-project1.netlify.app/">
                     <img src="noimageicon.png" alt="Project 1 by Loking" class="image2"> 
                     </a></p>
+                <p><a href="https://loking-mediaquaries.netlify.app/">
+                    <img src="Portrait.png" alt="Project 2 by Loking" class="image2"> 
+                    </a></p>
             </div>
             <h2>CONTACT:</h2>
             <p>Please contact me through my
